--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "node app.js",
-		"dev": "nodemon app.js"
+		"dev": "nodemon app.js",
+		"test": "jest"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
@@ -20,6 +21,7 @@
 		"validator": "^9.4.1"
 	},
 	"devDependencies": {
+		"jest": "^22.4.3",
 		"nodemon": "^1.17.3"
 	}
 }
